# weather-forecast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  config.example.toml  pyproject.toml
assets/translations/en/: buttons.ftl  messages.ftl
assets/translations/ru/: buttons.ftl  messages.ftl
backend/application/create_user/: interactor.py
backend/application/update_user_city/: interactor.py
backend/application/update_user_language/: interactor.py
backend/domain/entities/: user.py  weather.py
backend/infrastructure/: config.py
backend/infrastructure/database/: models.py  unit_of_work.py
backend/infrastructure/services/: weather.py
backend/presentation/telegram/: __main__.py  states.py
backend/presentation/web/: __main__.py  setup.py
deploy/: bot.Dockerfile  docker-compose.yaml  web.Dockerfile
frontend/form/: index.html  redirect.js  style.css
frontend/main/: cookies.js  style.css  themes.js
frontend/result/: index.html  script.js
weather_forecast/application/common/: interactor.py  unit_of_work.py
weather_forecast/application/create_user/: interactor.py
weather_forecast/application/repositories/: user.py
weather_forecast/application/update_user_city/: interactor.py
weather_forecast/application/update_user_language/: interactor.py
weather_forecast/domain/entities/: user.py  weather.py
weather_forecast/infrastructure/: config.py
weather_forecast/infrastructure/database/: models.py  unit_of_work.py
weather_forecast/infrastructure/services/: weather.py
weather_forecast/presentation/telegram/: __main__.py  (+1 more)
(+28 files in other folders)
